# spdk

./: .astylerc  .gitignore  .gitmodules  .gitreview  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG  CONTRIBUTING.md  GOVERNANCE.md  ISSUE_TEMPLATE.md  LICENSE  MAINTAINERS  Makefile  Makefile.lb  NVMe-Qualified-Name-Backus-Naur.txt  PORTING.md  README.md  SECURITY.md  TEST_ENV_SETUP_README.md  VERSION  all_tests.txt  autobuild.sh  autopackage.sh  autorun.sh  autorun_post.py  autotest.sh  bdscan.pl  chap_test.sh  config.h  configure  deprecation.md  flexio.sh  groups  host.sh  issue_567.sh  issue_687.sh  issue_687_vm.sh  issue_691.job  (+29 more)
.githooks/: pre-commit  pre-push
.github/: mistaken-pull-closer.yml
app/: Makefile
autotest/: run_test.sh
ci/: Jenkinsfile
doc/: .gitignore  Doxyfile  Doxyfile.ioat  Doxyfile.nvme  Makefile  README.md  WAL_recovery_demo.md  WAL_recovery_usage.md  about.md  accel_fw.md  applications.md  backporting.md  bdal_pg.md  bdev.md  bdev_module.md  bdev_pg.md  bdevperf.md  benchmarking.md  blob.md  blob_pg.md  blobfs.md  blobfs_pg.md  blobkv.md  build_with_vpp.md  ci_tools.md  compression.md  concepts.md  concurrency.md  containers.md  crypto.md  directory_structure.md  directory_structure.txt  distributions.md  driver_modules.md  event.md  experimental_tools.md  fio.md  fips.md  footer.html  ftl.md  (+74 more)
docker/: Dockerfile_spdk  Dockerfile_spdk_arm  README.md  accel-config-4.1.8.git4405db70-2.el9.aarch64.rpm  accel-config-devel-4.1.8.git4405db70-2.el9.aarch64.rpm  accel-config-libs-4.1.8.git4405db70-2.el9.aarch64.rpm  docker-compose.monitoring.yaml  docker-compose.yaml
dpa/: Makefile  vrdma_dpa_common.h
dpdkbuild/: 0001-Revert-mbuf-remove-void-pointer-cast.patch  Makefile
examples/: Makefile
go/: spdk.go
include/: Makefile
ipsecbuild/: Makefile
isalbuild/: Makefile  isa-l
isalcryptobuild/: Makefile  isa-l-crypto
lib/: Makefile
libutil/: Makefile.am  Makefile.in  atomic.h  completion.c  completion.h  meson.build  util.h
mk/: histogram.unittest.mk  ioat.unittest.mk  json.unittest.mk  nvme.libtest.mk  nvme.unittest.mk  nvmf.libtest.mk  nvmf.unittest.mk  spdk.app.mk  spdk.app_cxx.mk  spdk.app_vars.mk  spdk.common.mk  spdk.deps.mk  spdk.fio.mk  spdk.lib.mk  spdk.lib_deps.mk  spdk.mock.unittest.mk  spdk.module_deps.mk  spdk.modules.mk  spdk.nvmecli.mk  spdk.subdirs.mk  spdk.subsystems.mk  spdk.unittest.mk  spdk_blank.map  vhost.unittest.mk  vmd.libtest.mk
module/: Makefile
ocssd/: ocssd.conf  ocssd.job  qemu2-start.sh
pkg/: README  fedora28.spec  spdk.spec
proto/: Makefile  nvme.proto  nvmf.proto  nvmf_tcp.proto  sma.proto  virtio_blk.proto
py-spdk/: README.md  nvmf_client.py  nvmf_run_client.py  py-spdk.py  py_spdk.py  rpc.py  run_client.py  run_server.py  vhost_client.py  vhost_run_client.py
python/: Makefile  README.md  pyproject.toml  setup.py
python/spdk/: __init__.py
python/spdk/cli/: __init__.py  accel.py  app.py  bdev.py  bdev_nvme.py  blobfs.py  fsdev.py  iobuf.py  iscsi.py  keyring.py  log.py  lvol.py  misc.py  nbd.py  notify.py  nvmf.py  parser.py  sock.py  trace.py  ublk.py  vfio_user.py  vhost.py  vmd.py
python/spdk/mcp/: server.py
python/spdk/rpc/: __init__.py  accel.py  ae4dma.py  app.py  bdev.py  blobfs.py  client.py  cmd_parser.py  compressdev.py  config.py  dpdk_cryptodev.py  dsa.py  env_dpdk.py  fsdev.py  helpers.py  iaa.py  ioat.py  iobuf.py  iscsi.py  keyring.py  log.py  lvol.py  mlx5.py  nbd.py  notify.py  nvme.py  nvmf.py  pmem.py  sock.py  subsystem.py  trace.py  ublk.py  vfio_user.py  vhost.py  vmd.py
python/spdk/sma/: __init__.py  common.py  qmp.py  qos.py  sma.py
python/spdk/sma/device/: __init__.py  device.py  nvmf_tcp.py  nvmf_vfiouser.py  vhost_blk.py
python/spdk/sma/proto/: .gitignore  __init__.py  nvme.proto  nvmf_tcp.proto  sma.proto  virtio_blk.proto
python/spdk/sma/volume/: __init__.py  crypto.py  crypto_bdev.py  volume.py
python/spdk/spdkcli/: __init__.py  ui_node.py  ui_node_iscsi.py  ui_node_nvmf.py  ui_root.py
rpmbuild/: rpm-deps.sh  rpm.sh  spdk.spec
schema/: schema.json
scripts/: Makefile  ar-xnvme-fixer  arm_cross_compile.sh  backport.sh  (+68 more)
(+4200 files in other folders)
