# SPDX-License-Identifier: BSD-3-Clause
# Copyright (C) 2025 Dell Inc, or its subsidiaries.  All rights reserved.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spdk"
dynamic = ["version"]
readme = "README.md"
description = "Python bindings for the Storage Performance Development Kit (SPDK)"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }

authors = [
    { name = "SPDK Authors", email = "spdk@lists.linux.dev" }
]

keywords = ["spdk", "storage", "nvme", "performance", "bindings"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = []

[project.urls]
"Homepage" = "https://spdk.io"
"Source" = "https://github.com/spdk/spdk"
"Bug Tracker" = "https://github.com/spdk/spdk/issues"

[project.scripts]
spdk-rpc = "spdk.spdk_rpc:main"
spdk-sma = "spdk.spdk_sma:main"
spdk-cli = "spdk.spdk_cli:main"
spdk-mcp = "spdk.mcp:server"

[project.optional-dependencies]
sma = [
    "grpcio",
    "protobuf",
    "pyyaml"
]
cli = [
    "configshell_fb"
]
mcp = [
    "mcp[cli]>=1.9.2"
]

[tool.hatch.version]
path = "spdk/version.py"

# TODO: this is not ideal, better move pyproject file to the top
[tool.hatch.build.targets.sdist.force-include]
"../scripts/rpc.py" = "../scripts/rpc.py"
"../scripts/sma.py" = "../scripts/sma.py"
"../scripts/spdkcli.py" = "../scripts/spdkcli.py"

[tool.hatch.build.targets.wheel.force-include]
"../scripts/rpc.py" = "spdk/spdk_rpc.py"
"../scripts/sma.py" = "spdk/spdk_sma.py"
"../scripts/spdkcli.py" = "spdk/spdk_cli.py"

[tool.ruff]
fix = false
line-length = 140
exclude = [
    "xnvme",
    "python/spdk/sma",
    "ocf",
    "libvfio-user",
    "intel-ipsec-mb",
    "dpdk",
    "test",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # warnings
    "I",  # isort (import sorting)
]

[tool.mypy]
exclude = [
    "/spdk/sma",
    "/spdk/spdkcli",
]
